<resources>
    <string name="app_name">SilenceLake</string>
    <string name="bnv_home">홈</string>
    <string name="bnv_menu">메뉴</string>
    <string name="bnv_mypage">내정보</string>
    <string name="id_hint">ID (4 ~ 10 자리로 입력하세요)</string>
    <string name="pw_hint">PW (4 ~ 15 자리로 입력하세요)</string>
    <string name="button_login">Login</string>
    <string name="button_join">Join</string>
    <string name="nickname_hint">Nickname</string>
    <string name="product_name_kor">아이스 초코라떼</string>
    <string name="product_name_eng">Iced Chocolate Latte</string>
    <string name="recommended_title">추천 메뉴</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_welcome_mypage">환영합니다</string>
    <string name="order">ORDER</string>
    <string name="comment">COMMENT</string>
    <string name="coffee_size_tall">Tall</string>
    <string name="coffee_size_grande">Grande</string>
    <string name="coffee_size_venti">Venti</string>
    <string name="size">사이즈</string>
    <string name="quantity_title">주문 수량</string>
    <string name="store">담기</string>
    <string name="nfc_title">편의시설</string>
    <string name="hint_comment">댓글을 입력하세요</string>
    <string name="title_admin">관리자 페이지</string>
    <string name="daily_revanue">금일 매출</string>
    <string name="wifi_password">Wifi 비밀번호 : *23#</string>
    <string name="toilet_password">화장실 비밀번호 : 0318</string>
    <string name="request_dialog">테이블에 부착된 NFC를 태그해주세요</string>
</resources>