<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingVertical="8dp"
    android:paddingHorizontal="4dp"
    tools:context=".OrderFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/text_size_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup_coffeeSize_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_size_order"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_tall"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/coffee_size_tall" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_grande"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee_size_grande" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_venti"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee_size_venti" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/text_quantityTitle_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup_coffeeSize_order">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity_title"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/chipGroup_coffeeSize_order" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearlayout_quantity_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/text_quantityTitle_order">

        <ImageButton
            android:id="@+id/button_plus_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_add_24"
            android:backgroundTint="@color/primary" />

        <TextView
            android:id="@+id/text_quantity_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/primary"
            android:textSize="18dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/button_minus_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/ic_baseline_remove_24"
            android:backgroundTint="@color/primary" />

        <TextView
            android:id="@+id/text_totalPrice_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2400원"
            android:textAlignment="textEnd"
            android:textColor="@color/primary"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/button_order_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store"
        android:layout_marginTop="16dp"
        android:background="@null"
        app:backgroundTint="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/linearlayout_quantity_order" />

</androidx.constraintlayout.widget.ConstraintLayout>