<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">
    <ImageView
        android:id="@+id/img_logo_join"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo_join"
        android:id="@+id/textfield_id_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="32dp"
        android:id="@+id/textfield_pw_join"
        app:layout_constraintTop_toBottomOf="@id/textfield_id_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pw_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/linearlayout_btn_login"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/textfield_pw_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/button_login_login"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:textColor="@color/primary"
            app:layout_constraintTop_toBottomOf="@id/textfield_pw_join"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_join_login"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:id="@+id/button_join_login"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:text="@string/button_join"
            app:layout_constraintTop_toBottomOf="@id/textfield_pw_join"
            app:layout_constraintStart_toEndOf="@id/button_login_login"
            app:layout_constraintEnd_toEndOf="parent"
            style="?attr/materialButtonOutlinedStyle"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>