<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_wifipass_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_toiletpass_dialog"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/wifi_password"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv_toiletpass_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toilet_password"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_wifipass_dialog"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm_dialog"
        android:layout_marginBottom="40dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_request_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm_dialog"
        android:text="@string/request_dialog"
        android:layout_margin="30dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_toiletpass_dialog"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/lightbrown"
        android:text="확 인"/>



</androidx.constraintlayout.widget.ConstraintLayout>